fixed some overlap in roadmap section

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -405,8 +405,8 @@
             align-items: center;
 
             img {
-                width: 220px;
-                bottom: 420px;
+                width: 200px;
+                bottom: 390px;
             }
         }
 
@@ -508,7 +508,7 @@
     }
 }
 
-@media (max-width:400px) {
+@media (max-width:420px) {
 
     //join us
     .join {
